# tabula

./: .bumpversion.cfg  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  MANIFEST.in  README.md  meson.build  meson_cffi_buildtool.py  pyproject.toml  pytest.ini  requirements.txt  sample_config.toml  setup.cfg  setup.py
.reuse/: dep5
cffi/tabula/device/: _fbink.cdef.txt  _fbink.csrc.c
cffi/tabula/rendering/: _cairopango.c.py  _cairopango.cdef.txt  _cairopango.csrc.c
cocoa/: pyproject.toml
cocoa/src/cocoatabula/: __init__.py  keycodes.py  triococoa.py
docs/: design-choices.md  setup-guide.md
hostconfig/etc/: dhcpcd.conf
hostconfig/etc/systemd/system/: tabula.service
hostconfig/etc/udev/rules.d/: 10-persistent-tabula-net-device.rules
imprimare/: .bumpversion.cfg  README.md  setup.cfg  setup.py
imprimare/src/imprimare/: __init__.py  _fbink_build.py  dummyink.py  fbink.py  ink.py
notare/: .bumpversion.cfg  COPYING.md  MANIFEST.in  README.md  setup.cfg  setup.py
notare/src/notare/: __init__.py
notare/src/notare/device/: button.py  gadget.py  runner.py
notare/src/notare/device/preload/: waiting.png.license
notare/src/notare/gadget/: __init__.py  _mount_build.py  _usb_build.py  descriptors.py  mount.py
notare/src/notare/gadget/headers/: README.md
notare/src/notare/gadget/headers/asm/: ..install.cmd
notare/src/notare/gadget/headers/asm-generic/: ..install.cmd
notare/src/notare/gadget/headers/drm/: ..install.cmd
notare/src/notare/gadget/headers/linux/: ..install.cmd  input.h  ipu.h  pxp_dma.h  videodev2.h
notare/src/notare/gadget/headers/linux/android/: ..install.cmd
notare/src/notare/gadget/headers/linux/byteorder/: ..install.cmd
notare/src/notare/gadget/headers/linux/caif/: ..install.cmd
notare/src/notare/gadget/headers/linux/can/: ..install.cmd
notare/src/notare/gadget/headers/linux/dvb/: ..install.cmd
notare/src/notare/gadget/headers/linux/hdlc/: ..install.cmd
notare/src/notare/gadget/headers/linux/hsi/: ..install.cmd
notare/src/notare/gadget/headers/linux/iio/: ..install.cmd
notare/src/notare/gadget/headers/linux/isdn/: ..install.cmd
notare/src/notare/gadget/headers/linux/mmc/: ..install.cmd
notare/src/notare/gadget/headers/linux/netfilter/: ..install.cmd
notare/src/notare/gadget/headers/linux/netfilter_arp/: ..install.cmd
notare/src/notare/gadget/headers/linux/netfilter_bridge/: ..install.cmd
notare/src/notare/gadget/headers/linux/netfilter_ipv4/: ..install.cmd
notare/src/notare/gadget/headers/linux/netfilter_ipv6/: ..install.cmd
notare/src/notare/gadget/headers/linux/nfsd/: ..install.cmd
notare/src/notare/gadget/headers/linux/raid/: ..install.cmd
notare/src/notare/gadget/headers/linux/spi/: ..install.cmd
notare/src/notare/gadget/headers/linux/sunrpc/: ..install.cmd
notare/src/notare/gadget/headers/linux/tc_act/: ..install.cmd
notare/src/notare/gadget/headers/linux/tc_ematch/: ..install.cmd
notare/src/notare/gadget/headers/linux/usb/: ..install.cmd  ch9.h
notare/src/notare/gadget/headers/linux/wimax/: ..install.cmd
notare/src/notare/gadget/headers/misc/: ..install.cmd
notare/src/notare/gadget/headers/mtd/: ..install.cmd
notare/src/notare/gadget/headers/rdma/: ..install.cmd
notare/src/notare/gadget/headers/scsi/: ..install.cmd
notare/src/notare/gadget/headers/scsi/fc/: ..install.cmd
notare/src/notare/gadget/headers/sound/: ..install.cmd
notare/src/notare/gadget/headers/uapi/: ..install.cmd
notare/src/notare/gadget/headers/video/: ..install.cmd
notare/src/notare/gadget/headers/xen/: ..install.cmd
notare/src/notare/host/: _wordchars.py  config.py  db.py  document.py  export.py  help.py  loop.py  menus.py  notify.py  rendering.py  runner.py  stub.py  term.py  types.py  wordcount.py
notare/src/notare/host/term/: __init__.py  display.py  main_loop.py
notare/src/notare/protocol/: __init__.py
notare/tests/: test_benchmarks.py  test_dialog_rendering.py
notare/tests/renders/actuals/: .gitignore
notare/tests/sampletexts/: count-of-monte-cristo.md  count-of-monte-cristo.md.license  great-expectations.md  great-expectations.md.license  pride-and-prejudice.md  pride-and-prejudice.md.license
src/tabula/: __init__.py  app.py  commontypes.py  db.py  durations.py  screens.py  scripts.py  settings.py  util.py
src/tabula/benchmarks/: allc.py  legacy.py
src/tabula/cocoa/: keycodes.py  triococoa.py
src/tabula/device/: __init__.py  _fbink_build.py  battery.py  deviceutil.py  eventsource.py  fbink_screen_display.py  gestures.py  hardware.py  hwtypes.py  keyboard_consts.py  keystreams.py  kobo_keyboard.py  kobo_models.py  kobo_power_button.py  kobo_touchscreen.py  proc_bus_input_devices_parser.py  recorded_keyboard.py  rpctypes.py  tkinter_screen.py  types.py
src/tabula/device/bluetooth/: bluez.py  clara2e.py
src/tabula/editor/: composes.py  consts.py  doctypes.py  document.py  keystreams.py  layout.py  loops.py  types.py  wordcount.py
src/tabula/rebuild/: app.py  commontypes.py  db.py  doctypes.py  document.py  draft_rendering.py  gestures.py  hardware.py  hwtypes.py  keystreams.py  layout.py  rpctypes.py  screens.py  settings.py  util.py
src/tabula/rendering/: __init__.py  _cairopango_build.py  _cffi_build.py  cairo.py  fontconfig.py  layout.py  markdown.py  markup.py  pango.py  pango_render.py  renderer.py  renderer2.py  rendertypes.py  types.py
src/tabula/rendering/fonts/: 10-appfonts.conf  __init__.py
src/tabula/screens/: __init__.py  base.py  dialogs.py  drafting.py  fonts.py  help.py  keyboard_detect.py  menus.py  numbers.py  sprint_control.py  widgets.py
stilus/: .bumpversion.cfg  README.md  pyproject.toml  setup.cfg  setup.py
stilus/src/stilus/: _cffi_build.py  markdown.py  pango_render.py  types.py
stilus/tests/: test_rendering.py  test_stilus.py
stilus/tests/renders/goldens/: test_ti.png.license
tests/: test_durations.py  test_gestures.py  test_hardware.py  test_keystreams.py  test_kobo_keyboard.py  test_markdown_attrs.py  test_mt_snow_protocol.py  test_mt_type_b.py  test_rendering.py  test_wordcount.py
util/: tzsymlink.py
(+1 files in other folders)
