# SPDX-FileCopyrightText: 2021 Rose Davidson <rose@metaclassical.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cffi']

[project]
authors = [
  {name = 'Rose Davidson', email = 'rose@metaclassical.com'},
]
# complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
# TODO: update to https://peps.python.org/pep-0639/ when appropriate
# see also https://github.com/mesonbuild/meson-python/issues/270
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Artistic Software",
  "Topic :: Text Editors :: Word Processors",
  "Topic :: Text Processing :: Fonts",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
  'attrs',
  'cffi',
  'cardinality',
  'pygtrie',
  'markdown-it-py',
  'python-dateutil',
  'timeflake',
  'trio',
  'trio-util',
  'tricycle',
  'sqlalchemy',
  'msgspec',
  'cattrs',
]
description = 'cool as hecc'
dynamic = ['version']
name = 'tabula'
readme = 'README.md'
requires-python = '>=3.12'

[project.optional-dependencies]
# consider using https://packaging.python.org/en/latest/specifications/dependency-specifiers/#environment-markers
# to require these on mac os: platform_system=="Darwin"
devel = ['black', 'flake8', 'Flake8-pyproject']
test = ['Pillow', 'pytest', 'pytest-trio', 'pytest-benchmark']

[tool.black]
line-length = 140
target-version = ['py312']

[tool.flake8]
exclude = [".tox", ".eggs", "ci/templates", "build", "dist"]
ignore = ["E203", "E704"]
max-line-length = 140

# Consider if we care about limited-api.
# [tool.meson-python]
# limited-api = true
